fix(ui5-side-navigation): fix long words wrap/truncate (#13110)

--- a/packages/fiori/src/themes/SideNavigationItemBase.css
+++ b/packages/fiori/src/themes/SideNavigationItemBase.css
@@ -12,6 +12,7 @@
 	display: flex;
 	align-items: center;
 	width: auto;
+	min-width: 0;
 	box-sizing: border-box;
 	text-decoration: none;
 	position: relative;
@@ -21,6 +22,7 @@
 	background-color: var(--sapList_Background);
 	border-radius: var(--_ui5_side_navigation_item_border_radius);
 	transition: var(--_ui5_side_navigation_item_transition);
+	word-wrap: break-word;
 }
 
 :host(:not([in-popover])) .ui5-sn-item {
